test_case/rust-lang_rust/56765_447149832_16.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/associated-type/associated-type-projection-from-supertrait.rs","byte_start":1548,"byte_end":1552,"line_start":50,"line_end":50,"column_start":28,"column_end":32,"is_primary":true,"text":[{"text":"fn f() { ModelT.chip_paint(Blue); } //~ ERROR mismatched types","highlight_start":28,"highlight_end":32}],"label":"expected struct `Black`, found struct `Blue`","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `Black`\n   found type `Blue`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/associated-type/associated-type-projection-from-supertrait.rs:50:28\n   |\nLL | fn f() { ModelT.chip_paint(Blue); } //~ ERROR mismatched types\n   |                            ^^^^ expected struct `Black`, found struct `Blue`\n   |\n   = note: expected type `Black`\n              found type `Blue`\n\n"}
[00:49:31] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n